--- a/NEWS
+++ b/NEWS
@@ -1,1 +1,3 @@
-1. Expend show memory command display content -- 2023-11-30
+1. Table cache not load the already stored table. It maybe miss refer updating.
+2. Lack long value type for big int number input.
+3. Add strheaptable for string value type.
